[*] fix z-index button side

--- a/app/ui/components/atoms/ButtonSideStratagems/ButtonSideStratagems.module.css
+++ b/app/ui/components/atoms/ButtonSideStratagems/ButtonSideStratagems.module.css
@@ -4,11 +4,12 @@
   width: 2rem;
   left: 1.15rem;
   top: 1rem;
-  z-index: 1;
+  z-index: 2;
   border: none;
   font-size: 0;
   color: var(--yellow);
   background: transparent;
+  cursor: pointer;
 }
 
 .button svg {
